--- a/dadi.html
+++ b/dadi.html
@@ -4,9 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>上海歆笛实业有限公司|保险科技服务引领者</title>
-    <meta name="keywords" content="上海歆笛实业有限公司|官网">
-    <meta name="description" content="上海歆笛实业有限公司|官网">
+    <title>上海初盛网络科技有限公司|保险科技服务引领者</title>
+    <meta name="keywords" content="上海初盛网络科技有限公司官网">
+    <meta name="description" content="上海初盛网络科技有限公司官网">
     <meta name="format-detection" content="telephone=no,email=no,address=no">
     <link href="static/css/commain.css" rel="stylesheet">
     <link href="static/css/dadi.css" rel="stylesheet">
