--- a/cooperation.html
+++ b/cooperation.html
@@ -163,7 +163,7 @@
                     linkUrl:"https://sirenfei.github.io/xindi/dadi.html",
                     mchId:"000000000000112",
                     mchName:"中国大地财产保险股份有限公司",
-                    name:"责任保险",
+                    name:"车险",
                     ossFileName:"ad_img/1615779521523.png",
                     parentId:150
                 },
