--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,7 @@
             <ul class="ff-r">
                 <li>上海歆笛实业有限公司</li> 
                 <li>地址：上海市崇明区新海镇星村公路700号</li>
-                <li><a href='http://beian.miit.gov.cn/publish/query/indexFirst.action' class="curson-p" target="_blank" >沪ICP备2020025523号-6</a></li>
+                <li><a href='https://beian.miit.gov.cn/#/Integrated/recordQuery' class="curson-p" target="_blank" >沪ICP备2024056013号-1</a></li>
 
             </ul>
         </div> 
